Avoid .site-header__profile-type overflow on mobile only

--- a/src/css/minside/_organisms/_site-header.css
+++ b/src/css/minside/_organisms/_site-header.css
@@ -35,5 +35,8 @@
     text-overflow: ellipsis;
     display: inline-block;
     vertical-align: text-bottom;
+    @media (--tablet) {
+      width: auto;
+    }
   }
 }
